--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,30 +1,30 @@
 {
-  "name": "express_api",
+  "name": "universal-react-redux-registration",
   "version": "1.0.0",
-  "main": "index.js",
+  "author": "Ashley Bibizadeh",
   "license": "MIT",
+  "main": "index.js",
   "scripts": {
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "serve": "node index.js"
   },
   "dependencies": {
-    "bcrypt": "^3.0.0",
-    "compression": "^1.7.3",
-    "config": "^2.0.1",
-    "cookie-parser": "^1.4.3",
-    "cors": "^2.8.4",
-    "dotenv": "^6.0.0",
-    "express": "^4.16.3",
-    "express-async-errors": "^3.0.0",
-    "generate-password": "^1.4.0",
-    "helmet": "^3.13.0",
-    "joi": "^13.6.0",
-    "jsonwebtoken": "^8.3.0",
-    "lodash": "^4.17.10",
-    "mongoose": "^5.2.13",
-    "nodemailer": "^4.6.8",
-    "nodemailer-express-handlebars": "^3.0.0",
-    "nodemon": "^1.18.4",
-    "winston": "2.4.0",
-    "winston-mongodb": "^4.0.3"
+    "bcrypt": "3.0.0",
+    "compression": "1.7.3",
+    "config": "2.0.1",
+    "cookie-parser": "1.4.3",
+    "cors": "2.8.4",
+    "express": "4.16.3",
+    "express-async-errors": "3.0.0",
+    "generate-password": "1.4.0",
+    "helmet": "3.13.0",
+    "joi": "13.6.0",
+    "jsonwebtoken": "8.3.0",
+    "lodash": "4.17.10",
+    "mongoose": "5.2.13",
+    "nodemailer": "4.6.8",
+    "nodemailer-express-handlebars": "3.0.0",
+    "nodemon": "1.18.4",
+    "winston": "2.4.0"
   }
 }
