--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "react-starter-kit",
+  "name": "universal-react-redux-registration",
   "version": "1.0.0",
-  "description": "open source universal react redux graphql boilerplate",
+  "author": "Ashley Bibizadeh",
+  "license": "MIT",
   "scripts": {
     "heroku-postbuild": "webpack --config webpack.server.js && webpack --config webpack.client.js",
     "build": "webpack --config webpack.server.js && webpack --config webpack.client.js",
@@ -19,36 +20,34 @@
       "\\.(css|less)$": "<rootDir>/assetsTransformer.js"
     }
   },
-  "author": "Ashley Bibizadeh",
-  "license": "MIT",
   "dependencies": {
     "axios": "0.16.2",
-    "body-parser": "^1.18.3",
-    "classnames": "^2.2.5",
+    "body-parser": "1.18.3",
+    "classnames": "2.2.5",
     "concurrently": "3.5.0",
-    "config": "^2.0.1",
+    "config": "2.0.1",
     "copy-webpack-plugin": "4.5.1",
-    "es-cookie": "^1.2.0",
+    "es-cookie": "1.2.0",
     "express": "4.15.4",
     "express-http-proxy": "1.0.6",
-    "generate-password": "^1.4.0",
-    "lodash": "^4.17.11",
-    "nodemailer": "^4.6.4",
-    "nodemailer-express-handlebars": "^3.0.0",
+    "generate-password": "1.4.0",
+    "lodash": "4.17.11",
+    "nodemailer": "4.6.4",
+    "nodemailer-express-handlebars": "3.0.0",
     "nodemon": "1.12.0",
     "npm-run-all": "4.1.1",
     "react": "16.0.0",
-    "react-addons-css-transition-group": "^15.6.2",
+    "react-addons-css-transition-group": "15.6.2",
     "react-dom": "16.0.0",
     "react-helmet": "5.2.0",
     "react-redux": "5.0.6",
     "react-router-config": "1.0.0-beta.4",
     "react-router-dom": "4.2.2",
     "redux": "3.7.2",
-    "redux-form": "^7.3.0",
+    "redux-form": "7.3.0",
     "redux-thunk": "2.2.0",
     "serialize-javascript": "1.4.0",
-    "toastr": "^2.1.4",
+    "toastr": "2.1.4",
     "webpack": "3.5.6",
     "webpack-node-externals": "1.6.0",
     "winston": "2.4.0"
@@ -58,19 +57,19 @@
     "@babel/preset-env": "7.0.0",
     "@babel/preset-react": "7.0.0",
     "babel-core": "7.0.0-bridge.0",
-    "babel-jest": "^23.6.0",
+    "babel-jest": "23.6.0",
     "babel-loader": "8.0.2",
     "babel-polyfill": "6.26.0",
-    "css-loader": "^0.28.7",
-    "enzyme": "^3.6.0",
-    "enzyme-adapter-react-16": "^1.5.0",
-    "extract-loader": "^1.0.1",
-    "fetch-mock": "^7.0.5",
-    "file-loader": "^0.11.2",
-    "jest": "^23.6.0",
-    "node-sass": "^4.5.3",
-    "redux-mock-store": "^1.5.3",
-    "sass-loader": "^6.0.6",
-    "webpack-cli": "^3.1.0"
+    "css-loader": "0.28.7",
+    "enzyme": "3.6.0",
+    "enzyme-adapter-react-16": "1.5.0",
+    "extract-loader": "1.0.1",
+    "fetch-mock": "7.0.5",
+    "file-loader": "0.11.2",
+    "jest": "23.6.0",
+    "node-sass": "4.5.3",
+    "redux-mock-store": "1.5.3",
+    "sass-loader": "6.0.6",
+    "webpack-cli": "3.1.0"
   }
 }
