--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -48,7 +48,8 @@
     "redux-thunk": "2.2.0",
     "serialize-javascript": "1.4.0",
     "toastr": "2.1.4",
-    "webpack": "3.5.6",
+    "webpack": "4.17.2",
+    "webpack-cli": "3.1.0",
     "webpack-node-externals": "1.6.0",
     "winston": "2.4.0",
     "babel-polyfill": "6.26.0"
@@ -63,9 +64,9 @@
     "css-loader": "0.28.7",
     "enzyme": "3.6.0",
     "enzyme-adapter-react-16": "1.5.0",
-    "extract-loader": "1.0.1",
+    "extract-loader": "^3.0.0",
     "fetch-mock": "7.0.5",
-    "file-loader": "0.11.2",
+    "file-loader": "^2.0.0",
     "jest": "23.6.0",
     "node-sass": "4.5.3",
     "redux-mock-store": "1.5.3",
