--- a/Backend/package.json
+++ b/Backend/package.json
@@ -6,7 +6,10 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon index.js",
-    "serve": "node index.js"
+    "serve": "node index.js",
+    "test": "jest --runInBand --watchAll --verbose",
+    "test_coverage": "jest --runInBand --watchAll --verbose --coverage",
+    "jest_clearCache": "jest --clearCache"
   },
   "dependencies": {
     "bcrypt": "2.0.1",
@@ -26,5 +29,9 @@
     "nodemailer-express-handlebars": "3.0.0",
     "nodemon": "1.18.4",
     "winston": "2.4.0"
+  },
+  "devDependencies": {
+    "jest": "^23.6.0",
+    "supertest": "^3.3.0"
   }
 }
