--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "axios": "0.16.2",
+    "babel-polyfill": "6.26.0",
     "body-parser": "1.18.3",
     "classnames": "2.2.5",
     "concurrently": "3.5.0",
@@ -40,6 +41,7 @@
     "react-addons-css-transition-group": "15.6.2",
     "react-dom": "16.0.0",
     "react-helmet": "5.2.0",
+    "react-js-pagination": "^3.0.2",
     "react-redux": "5.0.6",
     "react-router-config": "1.0.0-beta.4",
     "react-router-dom": "4.2.2",
@@ -51,8 +53,7 @@
     "webpack": "4.17.2",
     "webpack-cli": "3.1.0",
     "webpack-node-externals": "1.6.0",
-    "winston": "2.4.0",
-    "babel-polyfill": "6.26.0"
+    "winston": "2.4.0"
   },
   "devDependencies": {
     "@babel/core": "7.0.0",
