--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,67 +11,91 @@
     "dev:build-server": "webpack --config webpack.server.js --watch",
     "dev:build-client": "webpack --config webpack.client.js --watch",
     "dev:server": "nodemon --watch build --exec node build/bundle.js",
-    "test": "jest",
+    "lint": "eslint src",
+    "test": "eslint src && jest",
     "test-coverage": "jest --coverage"
   },
   "jest": {
     "moduleNameMapper": {
       "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/assetsTransformer.js",
-      "\\.(css|less)$": "<rootDir>/assetsTransformer.js"
+      "\\.(css|less|scss)$": "<rootDir>/assetsTransformer.js"
+    },
+    "setupFilesAfterEnv": [
+      "<rootDir>/setupTests.js"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-push": "eslint src && jest"
     }
   },
   "dependencies": {
-    "axios": "0.16.2",
+    "axios": "0.18.0",
     "babel-polyfill": "6.26.0",
     "body-parser": "1.18.3",
-    "classnames": "2.2.5",
-    "concurrently": "3.5.0",
-    "config": "2.0.1",
-    "copy-webpack-plugin": "4.5.1",
+    "classnames": "2.2.6",
+    "concurrently": "4.1.0",
+    "config": "3.1.0",
+    "copy-webpack-plugin": "5.0.2",
     "es-cookie": "1.2.0",
-    "express": "4.15.4",
-    "express-http-proxy": "1.0.6",
-    "generate-password": "1.4.0",
+    "express": "4.16.4",
+    "express-http-proxy": "1.5.1",
+    "generate-password": "1.4.1",
     "lodash": "4.17.11",
-    "nodemailer": "4.6.4",
+    "nodemailer": "6.1.0",
     "nodemailer-express-handlebars": "3.0.0",
-    "nodemon": "1.12.0",
-    "npm-run-all": "4.1.1",
-    "react": "16.0.0",
+    "nodemon": "1.18.11",
+    "npm-run-all": "4.1.5",
+    "prop-types": "15.7.2",
+    "react": "16.8.6",
     "react-addons-css-transition-group": "15.6.2",
-    "react-dom": "16.0.0",
-    "react-helmet": "5.2.0",
-    "react-js-pagination": "^3.0.2",
-    "react-redux": "5.0.6",
-    "react-router-config": "1.0.0-beta.4",
-    "react-router-dom": "4.2.2",
-    "redux": "3.7.2",
-    "redux-form": "7.3.0",
-    "redux-thunk": "2.2.0",
-    "serialize-javascript": "1.4.0",
+    "react-dom": "16.8.6",
+    "react-helmet": "6.0.0-beta",
+    "react-js-pagination": "3.0.2",
+    "react-redux": "7.0.2",
+    "react-router-config": "5.0.0",
+    "react-router-dom": "5.0.0",
+    "redux": "4.0.1",
+    "redux-form": "8.2.0",
+    "redux-thunk": "2.3.0",
+    "serialize-javascript": "1.6.1",
     "toastr": "2.1.4",
-    "webpack": "4.17.2",
-    "webpack-cli": "3.1.0",
-    "webpack-node-externals": "1.6.0",
+    "webpack": "4.30.0",
+    "webpack-cli": "3.3.0",
+    "webpack-node-externals": "1.7.2",
     "winston": "2.4.0"
   },
   "devDependencies": {
-    "@babel/core": "7.0.0",
-    "@babel/preset-env": "7.0.0",
+    "@babel/core": "7.4.3",
+    "@babel/plugin-proposal-class-properties": "7.4.0",
+    "@babel/preset-env": "7.4.3",
     "@babel/preset-react": "7.0.0",
     "babel-core": "7.0.0-bridge.0",
-    "babel-jest": "23.6.0",
-    "babel-loader": "8.0.2",
-    "css-loader": "0.28.7",
-    "enzyme": "3.6.0",
-    "enzyme-adapter-react-16": "1.5.0",
-    "extract-loader": "^3.0.0",
-    "fetch-mock": "7.0.5",
-    "file-loader": "^2.0.0",
-    "jest": "23.6.0",
-    "node-sass": "4.9.4",
+    "babel-eslint": "10.0.1",
+    "babel-jest": "24.7.1",
+    "babel-loader": "8.0.5",
+    "css-loader": "2.1.1",
+    "cssnano": "4.1.10",
+    "enzyme": "3.9.0",
+    "enzyme-adapter-react-16": "1.12.1",
+    "eslint": "5.16.0",
+    "eslint-config-airbnb": "17.1.0",
+    "eslint-plugin-import": "2.17.1",
+    "eslint-plugin-jsx-a11y": "6.2.1",
+    "eslint-plugin-react": "7.12.4",
+    "extract-loader": "3.1.0",
+    "extract-text-webpack-plugin": "v4.0.0-alpha.0",
+    "fetch-mock": "7.3.1",
+    "file-loader": "3.0.1",
+    "husky": "1.3.1",
+    "jest": "24.7.1",
+    "node-sass": "4.11.0",
+    "postcss-import": "12.0.1",
+    "postcss-loader": "3.0.0",
+    "postcss-preset-env": "6.6.0",
     "redux-mock-store": "1.5.3",
-    "sass-loader": "6.0.6",
-    "webpack-cli": "3.1.0"
+    "sass-loader": "7.1.0",
+    "style-loader": "0.23.1",
+    "webpack-cli": "3.3.0"
   }
 }
