--- a/Backend/package.json
+++ b/Backend/package.json
@@ -13,26 +13,26 @@
   },
   "dependencies": {
     "bcrypt": "2.0.1",
-    "compression": "1.7.3",
-    "config": "2.0.1",
-    "cookie-parser": "1.4.3",
-    "cors": "2.8.4",
-    "express": "4.16.3",
-    "express-async-errors": "3.0.0",
-    "generate-password": "1.4.0",
-    "helmet": "3.13.0",
-    "joi": "13.6.0",
-    "joi-objectid": "^2.0.0",
-    "jsonwebtoken": "8.3.0",
-    "lodash": "4.17.10",
-    "mongoose": "5.2.13",
-    "nodemailer": "4.6.8",
+    "compression": "1.7.4",
+    "config": "3.1.0",
+    "cookie-parser": "1.4.4",
+    "cors": "2.8.5",
+    "express": "4.16.4",
+    "express-async-errors": "3.1.1",
+    "generate-password": "1.4.1",
+    "helmet": "3.16.0",
+    "joi": "14.3.1",
+    "joi-objectid": "2.0.0",
+    "jsonwebtoken": "8.5.1",
+    "lodash": "4.17.11",
+    "mongoose": "5.5.2",
+    "nodemailer": "6.1.1",
     "nodemailer-express-handlebars": "3.0.0",
-    "nodemon": "1.18.4",
+    "nodemon": "1.18.11",
     "winston": "2.4.0"
   },
   "devDependencies": {
-    "jest": "^23.6.0",
-    "supertest": "^3.3.0"
+    "jest": "24.7.1",
+    "supertest": "4.0.2"
   }
 }
